# Antigravity-Proxy

./: .env.example  .gitignore  README.md  antigravity-proxy.service  antigravity_proxy.py  pyproject.toml  requirements.txt
antigravity_proxy_core/: antigravity.py
hermes_overrides/: antigravity_gemini_models_patch.py
scripts/: update_gemini_discovery_fixture.py
tests/: test_antigravity_proxy.py  test_gemini_native_cua_cli.py  test_responses_api.py
tools/gemini-native-cua/: README.md  package-lock.json  package.json
tools/gemini-native-cua/proxy/: gemini_native_cua_proxy.py
tools/gemini-native-cua/scripts/: install.sh
tools/gemini-native-cua/systemd/: gemini-native-cua-proxy.service
