[project]
name = "antigravity-proxy"
version = "0.1.0"
description = "OpenAI-compatible FastAPI proxy for Antigravity / Cloud Code models"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
  "fastapi>=0.115",
  "uvicorn>=0.30",
  "httpx>=0.27",
  "pydantic>=2",
]

[project.optional-dependencies]
test = ["pytest>=8"]

[tool.pytest.ini_options]
testpaths = ["tests"]
